--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Shop</title>
+  <title>Stanislaw's Shop</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -95,7 +95,7 @@
         <button>Add to Cart</button>
       </div>
       <div class="product">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYktqAhuY4LD-NjKLcNbpnOcm10_Oq9wmGadbal2a5-w&s" alt="Product 2">
+        <img src="https://www.lornajane.com.au/dw/image/v2/BDXV_PRD/on/demandware.static/-/Sites-lornajane-master/default/dwa0de9ebb/images/LB0134/LB0134_BLK_8_PRODUCT.jpg?sw=603&sh=846&q=90&strip=true" alt="Product 2">
         <h3>Pants</h3>
         <p>$29.99</p>
         <button>Add to Cart</button>
@@ -107,7 +107,7 @@
         <button>Add to Cart</button>
       </div>
       <div class="product">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQC7usCz5YOdmuIQb8onZRK-rkACqwPc_lVig&s" alt="Product 4">
+        <img src="https://www.madhappy.com/cdn/shop/files/Madhappy-Classics-Fleece-Hoodie-Flat-Black-01_69215d2d-5a77-4f4f-af36-bf24e7fc91c4.jpg?v=1707937941" alt="Product 4">
         <h3>Hoodie<h3>
         <p>$49.99</p>
         <button>Add to Cart</button>
